# python-cruzamento-dados-politicos

./: .dockerignore  .env  .env.example  .gitignore  Anotacoes.md  CONTRIBUTING.md  Dockerfile  Makefile  QUICK_START.md  README.md  SISTEMA_AUDITORIA.md  SISTEMA_README.md  docker-compose.yml  dockerfile  env.sample  populate_db.py  readme.md  requirements.txt  setup.sh
apps/: config.py  models.py
apps/home/: api_services.py  data_crossing_service.py  integrity_service.py  routes.py
data/output/: contracts_during_sanction.csv  summary.json
docker/mysql/: create-database.sh  my.cnf
flask-black-dashboard/apps/home/: routes.py
flask-black-dashboard/templates/home/: monitor_integridade.html
flask-black-dashboard/templates/includes/: sidebar.html
nginx/: appseed-app.conf
old/: Makefile  docker-compose.yml  pyproject.toml  requirements.txt
old/data/raw/: ceis.csv  contracts.csv
old/src/politicos/: cli.py  models.py
old/src/politicos/connectors/: __init__.py
old/src/politicos/rules/: __init__.py  sanction_overlap.py
src/politicos/: config.py  pipeline.py
src/politicos/connectors/: ceis.py  contracts.py  csv_loader.py
src/politicos/rules/: sanction_overlap.py
templates/home/: analise_completa.html  index.html  monitor_integridade.html  sancoes_contratos.html
templates/includes/: footer-fullscreen.html  footer.html  sidebar.html
