[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-politicos"
version = "0.1.0"
description = "Base Python para cruzamento de dados públicos e detecção de risco em contratos"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
]

[project.scripts]
politicos = "politicos.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]